alpaca-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-prod
  labels:
    app: "alpaca"
    env: "prod"
    ver: "1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "alpaca"
  template:
    metadata:
      labels:
        app: "alpaca"
        env: "prod"
        ver: "1"
    spec:
      containers:
      - name: "alpaca"
        image: "gcr.io/kuar-demo/kuard-arm64:blue"
        ports:
        - containerPort: 80
