bandicoot-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bandicoot-staging
  labels:
    app: "bandicoot"
    env: "staging"
    ver: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "bandicoot"
  template:
    metadata:
      labels:
        app: "bandicoot"
        env: "staging"
        ver: "2"
    spec:
      containers:
      - name: "bandicoot"
        image: "gcr.io/kuar-demo/kuard-arm64:green"
