fluentd.yaml
apiVersion: apps/v1 
kind: DaemonSet 
metadata:
  name: fluentd 
  labels:
    app: fluentd 
spec:
  selector: 
    matchLabels:
      app: fluentd 
  template:
    metadata: 
      labels:
        app: fluentd 
    spec:
      containers:
      - name: fluentd
        image: fluent/fluentd:v0.14.10 
        resources:
          limits: 
            memory: 200Mi
          requests:
            cpu: 100m 
            memory: 200Mi
        volumeMounts: 
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true 
      terminationGracePeriodSeconds: 30 
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers 
        hostPath:
          path: /var/lib/docker/containers
