kuard-config.yaml
apiVersion: v1 
kind: Pod 
metadata:
  name: kuard-config 
spec:
  containers:
    - name: test-container
      image: gcr.io/kuar-demo/kuard-arm64:blue 
      imagePullPolicy: Always
      command:
        - "/kuard"
        - "$(EXTRA_PARAM)" 
      volumeMounts:
        # Mounting the ConfigMap as a set of files
        - name: config-volume 
          mountPath: /config
    volumes:
      - name: config-volume
        configMap:
          name: my-config
    restartPolicy: Never
