dns-service.yaml
kind: Service 
apiVersion: v1 
metadata:
  name: external-database 
spec:
  type: ExternalName
  externalName: database.company.com
