external-ip-endpoints.yaml
kind: Endpoints 
apiVersion: v1 
metadata:
  name: external-ip-database 
subsets:
  - addresses:
    - ip: 192.168.0.1 
    ports:
    - port: 3306
