service-queque.yaml
apiVersion: v1 
kind: Service 
metadata:
  labels:
    app: work-queue 
    component: queue 
    chapter: jobs
  name: queue 
spec:
ports:
- port: 8080
  protocol: TCP
  targetPort: 8080 
selector:
  app: work-queue 
  component: queue
